# Task-Manager-Pro

./: .dockerignore  .env.template  .gitignore  CONTRIBUTING.md  README.md  dockerfile  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  send_reminders.py  tasks.json
models/: user.py
services/: task_manager.py
storage/: json_storage.py
task_manager_pro/: cli.py  send_reminders.py
task_manager_pro/models/: task.py
task_manager_pro/services/: task_manager.py
task_manager_pro/storage/: interface.py  json_storage.py
task_manager_pro/utils/: logger_context.py
tests/: test_email.py  test_tasks.py  test_users.py
utils/: decorators.py  emailer.py  session.py
